Make DB download functional + reorganize data management layout
